{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 73,
  "lineage": "4e82894d-d5ff-b348-2bf4-cd64641a4f0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-nginx-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:483793222852:instance/i-05fa2243329349874",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fa2243329349874",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04228c0411ce3a63a",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.9",
            "public_ip": "3.238.232.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0484576689b4111b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056baed6f710f0858",
            "tags": {
              "Name": "tf_nginx_instance"
            },
            "tags_all": {
              "Name": "tf_nginx_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-054dc302774121059"
            ]
          },
          "dependencies": [
            "aws_security_group.tf-public-instance-SG",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483793222852:internet-gateway/igw-0769d2f4d99748d8d",
            "id": "igw-0769d2f4d99748d8d",
            "owner_id": "483793222852",
            "tags": {
              "Name": "tf_igw"
            },
            "tags_all": {
              "Name": "tf_igw"
            },
            "vpc_id": "vpc-0dcc9997b6976e375"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483793222852:route-table/rtb-0b2f5a73bb9c1bd12",
            "id": "rtb-0b2f5a73bb9c1bd12",
            "owner_id": "483793222852",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0769d2f4d99748d8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf_public_route"
            },
            "tags_all": {
              "Name": "tf_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcc9997b6976e375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_ps_pr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088f1bd55ec9b36e1",
            "route_table_id": "rtb-0b2f5a73bb9c1bd12",
            "subnet_id": "subnet-056baed6f710f0858"
          },
          "dependencies": [
            "aws_internet_gateway.tf_gw",
            "aws_route_table.tf_public_route",
            "aws_subnet.tf_public_subnet",
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-public-instance-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483793222852:security-group/sg-054dc302774121059",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound to anywhere to anyprotocol",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054dc302774121059",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP connection from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs connection from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh connection from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-EC2",
            "name_prefix": "",
            "owner_id": "483793222852",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-EC2-SG"
            },
            "tags_all": {
              "Name": "public-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dcc9997b6976e375"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483793222852:subnet/subnet-056baed6f710f0858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056baed6f710f0858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "483793222852",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf_public_subnet"
            },
            "tags_all": {
              "Name": "tf_public_subnet"
            },
            "vpc_id": "vpc-0dcc9997b6976e375"
          },
          "dependencies": [
            "aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:483793222852:vpc/vpc-0dcc9997b6976e375",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/24",
            "default_network_acl_id": "acl-047cefaebe816d2d0",
            "default_route_table_id": "rtb-0d2995325c15dfb96",
            "default_security_group_id": "sg-09368393422355470",
            "dhcp_options_id": "dopt-0d053bd65f3bd41d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dcc9997b6976e375",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d2995325c15dfb96",
            "owner_id": "483793222852",
            "tags": {
              "Name": "terraform_vpc"
            },
            "tags_all": {
              "Name": "terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}